--- a/src/PingPong/Views/ShellView.xaml
+++ b/src/PingPong/Views/ShellView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PingPong.ShellView"
+﻿<UserControl x:Class="PingPong.Views.ShellView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
