--- a/src/PingPong/Views/TimelinesView.xaml
+++ b/src/PingPong/Views/TimelinesView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PingPong.TimelinesView"
+﻿<UserControl x:Class="PingPong.Views.TimelinesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:b="clr-namespace:PingPong.Behaviors"
@@ -23,7 +23,7 @@
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal">
                 <Button Width="80"
-                        cal:Action.Target="PingPong.StatusViewModel"
+                        cal:Action.Target="PingPong.ViewModels.StatusViewModel"
                         cal:Message.Attach="Show"
                         Content="Status"
                         FontFamily="{StaticResource DefaultFontFamily}"
