--- a/src/PingPong/Views/TweetsPanelView.xaml
+++ b/src/PingPong/Views/TweetsPanelView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PingPong.TweetsPanelView"
+﻿<UserControl x:Class="PingPong.Views.TweetsPanelView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
