--- a/src/PingPong/Views/UserView.xaml
+++ b/src/PingPong/Views/UserView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PingPong.UserView"
+﻿<UserControl x:Class="PingPong.Views.UserView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:cal="http://www.caliburnproject.org"
