--- a/src/PingPong/Views/TimelinesView.xaml
+++ b/src/PingPong/Views/TimelinesView.xaml
@@ -8,8 +8,8 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:toolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit"
-             d:DesignHeight="392"
-             d:DesignWidth="592"
+             d:DesignHeight="451"
+             d:DesignWidth="905"
              mc:Ignorable="d">
     <Grid x:Name="LayoutRoot" Background="#FF181818">
         <Grid.RowDefinitions>
@@ -22,42 +22,48 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal">
-                <Button Width="80"
-                        cal:Action.Target="PingPong.ViewModels.StatusViewModel"
+                <Button cal:Action.Target="PingPong.ViewModels.StatusViewModel"
                         cal:Message.Attach="Show"
                         Content="Status"
                         FontFamily="{StaticResource DefaultFontFamily}"
                         FontSize="13.333"
                         Foreground="{StaticResource ButtonForegroundBrush}"
-                        Padding="5,2"
+                        Padding="10,2"
                         Style="{StaticResource SimpleToggleButtonStyle}" />
                 <ToggleButton x:Name="ShowHome"
-                              Width="80"
                               Content="Home"
                               FontFamily="{StaticResource DefaultFontFamily}"
                               FontSize="13.333"
                               Foreground="{StaticResource ButtonForegroundBrush}"
-                              Padding="5,2"
+                              Padding="10,2"
                               Style="{StaticResource SimpleToggleButtonStyle}" />
                 <ToggleButton x:Name="ShowMentions"
-                              Width="80"
                               Content="Mentions"
                               FontFamily="{StaticResource DefaultFontFamily}"
                               FontSize="13.333"
                               Foreground="{StaticResource ButtonForegroundBrush}"
-                              Padding="5,2"
+                              Padding="10,2"
                               Style="{StaticResource SimpleToggleButtonStyle}" />
                 <ToggleButton x:Name="ShowMessages"
-                              Width="80"
                               Content="Messages"
                               FontFamily="{StaticResource DefaultFontFamily}"
                               FontSize="13.333"
                               Foreground="{StaticResource ButtonForegroundBrush}"
-                              Padding="5,2"
+                              Padding="10,2"
                               Style="{StaticResource SimpleToggleButtonStyle}" />
             </StackPanel>
 
             <StackPanel Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal">
+                <Grid DataContext="{Binding RateLimit}">
+                    <TextBlock Margin="5,0"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               FontFamily="{StaticResource DefaultFontFamily}"
+                               FontSize="13.333"
+                               Foreground="{StaticResource ScreenNameTextBrush}"
+                               Text="{Binding RemainingHits}"
+                               ToolTipService.ToolTip="remaining API calls this hour" />
+                </Grid>
                 <TextBox x:Name="SearchText"
                          Width="200"
                          Margin="0,0,0,1"
@@ -99,6 +105,6 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-        <toolkit:BusyIndicator Grid.RowSpan="2" IsBusy="{Binding IsBusy}" Style="{StaticResource BusyIndicatorStyle}" />
+        <toolkit:BusyIndicator Grid.RowSpan="2" d:IsHidden="True" IsBusy="{Binding IsBusy}" Style="{StaticResource BusyIndicatorStyle}" />
     </Grid>
 </UserControl>
